# opencv_Qt

./: README.md
CMake/: CMakeLists.txt  Qt  main.cpp
CMake/src/UI/: cmainwindow.cpp  cmainwindow.h
CMake/src/log/: LogManager.cpp  LogManager.h
QtCreator/: .qmake.stash
QtCreator/Chapter02/Hello_Qt_OpenCV/: Hello_Qt_OpenCV.pro  Hello_Qt_OpenCV.pro.user.2ed81a3
QtCreator/Chapter03/Hello_Qt_OpenCV/: Hello_Qt_OpenCV.pro
QtCreator/Chapter03/Plugin_User/: Plugin_User.pro  cvplugininterface.h  mainwindow.cpp
QtCreator/Chapter03/median_filter_plugin/: cvplugininterface.h  median_filter_plugin.pro
QtCreator/Chapter04/Painter_Test/: mainwindow.h.autosave  qblinkingwidget.cpp
QtCreator/Chapter05/Graphics_Viewer/: mainwindow.cpp  qcustomgraphicseffect.cpp  qcustomgraphicseffect.h  qenhancedgraphicsview.cpp  qenhancedgraphicsview.cpp.autosave  qenhancedgraphicsview.h
QtCreator/Chapter05/computer_vision/mainapp/: mainapp.pro  mainwindow.cpp  mainwindow.h
QtCreator/Chapter05/computer_vision/template_plugin/: template_plugin.h  template_plugin.pro
